Assignments/Data Structure/CISC220/.metadata/.plugins/org.eclipse.cdt.ui/CISC260.build.log
08:57:47 **** Incremental Build of configuration Debug for project CISC260 ****
make all 
Building file: ../funct.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"funct.d" -MT"funct.o" -o "funct.o" "../funct.cpp"
../funct.cpp:29:8: error: use of undeclared identifier 'funct1'
        cout<<funct1(2)<<endl;
              ^
1 error generated.
make: *** [funct.o] Error 1

08:57:48 Build Finished (took 547ms)

